updated description of firm

--- a/tutorials/FIRM.ipynb
+++ b/tutorials/FIRM.ipynb
@@ -17,31 +17,33 @@
     "\n",
     "1. An increasing sequence of category thresholds\n",
     "2. The weights for the relative importance of each decision threshold \n",
-    "3. The risk threshold, a value between 0 and 1 that indicates the cost of a miss relative to the cost of a false alarm \n",
+    "3. The risk threshold, a value between 0 and 1 that is related to the cost of a miss relative to the cost of a false alarm \n",
     "4. Optional: A discount distance parameter, an opportunity to discount the penalty for near misses and near false alarms \n",
     "\n",
     "## Example\n",
-    "Let's say that we have a wind warning service that has three categories; no warning, gale warning and storm warning. This means that our category thresholds are `[34, 48]` where values correspond to wind magnitude forecasts (knots). It's twice as important to get the warning vs no warning decision threshold correct rather than the gale vs storm warning decision correct, so our weights are `[2, 1]`. The risk threshold of the service, i.e. the cost of a miss to the cost of a false alarm, is equal to 0.7. To optimise the expected FIRM score, one must forecast the highest category for which the probability of observing that category or higher has greater than 30% chance of occurring. This is calculated by $P (event) \\ge 1 - risk \\: threshold$. In this wind warning service we don't discount the penalty for near misses or near false alarms.\n",
+    "Let's say that we have a wind warning service that has three categories; nil warning (wind speed < 34 kts), gale warning (34 kts ≤ wind speed < 48 kts),and storm warning (wind speed ≥ 48 kts). This means that our category thresholds are `[34, 48]` where values correspond to wind magnitude forecasts (knots). It's twice as important to get the warning vs nil warning decision threshold correct rather than the gale vs storm warning decision correct, so our weights are `[2, 1]`. \n",
+    "\n",
+    "Next we need to determine our risk threshold ($\\alpha$).Suppose the ratio between the cost of miss to the cost of false alarm is 3:1. Then $\\alpha/(1-\\alpha)=3/1$, and so $\\alpha = 0.75$. To optimise the expected FIRM score, one must forecast the highest category for which the probability of observing that category or higher has a greater than 25% chance of occurring. This is calculated by $P (event) \\ge 1 - \\alpha$. In this wind warning service we don't discount the penalty for near misses or near false alarms.\n",
     "\n",
     "To summarise our FIRM framework parameters:\n",
     "\n",
     "1. Our category thresholds values are `[34, 48]`\n",
     "2. Our threshold weights are `[2, 1]`\n",
-    "3. Our risk threshold is `0.7`\n",
+    "3. Our risk threshold is `0.75`\n",
     "\n",
     "Our scoring matrix based on these parameters is\n",
     "\n",
-    "|       | None | Gale | Storm |\n",
+    "|       | Nil  | Gale | Storm |\n",
     "|-------|------|------|-------|\n",
-    "| None  | 0    | 1.4  | 2.3   |\n",
-    "| Gale  | 0.6  | 0    | 0.7   |\n",
-    "| Storm | 0.9  | 0.3  | 0     |\n",
+    "| Nil   | 0    | 1.5  | 2.3   |\n",
+    "| Gale  | 0.5  | 0    | 0.75  |\n",
+    "| Storm | 0.75 | 0.25 | 0     |\n",
     "\n",
-    "where the column headers correspond to the observed category and the row headers correspond to the forecast category. We can see that:\n",
+    "where the column headers correspond to the observed category and the row headers correspond to the forecast category. For example if the warning is for storm force winds and gales are observed, then the penalty is 0.25. We can see that:\n",
     "\n",
     "- There is no penalty along the diagonal if you forecast the correct category.\n",
-    "- You get a bigger penalty for missing an event than for issuing a false alarm. This is due to the risk threshold being set at `0.7`.\n",
-    "- You get twice the penalty for forecasting none and observing gales compared to forecasting gales and observing storm force conditions due to the threshold weights. These two penalties sum together when being out by two categories (i.e., forecasting None and observing storm force conditions).\n",
+    "- You get a bigger penalty for missing an event than for issuing a false alarm. This is due to the risk threshold being set at `0.75`. If the risk threshold $\\alpha$ is set to 0.5, then misses and false alarms would receive the same penalty. Alternatively if $\\alpha$ is less than 0.5, then you would receive a bigger penalty for producing a false alarm than missing an event. \n",
+    "- You get twice the penalty for forecasting Nil and observing gales compared to forecasting gales and observing storm force conditions due to the threshold weights. These two penalties sum together when being out by two categories (i.e., forecasting Nil and observing storm force conditions).\n",
     "\n",
     "For a detailed explanation of the FIRM calculations and various extensions, please see\n",
     "\n",
@@ -57,12 +59,12 @@
     "\n",
     "Let's verify two synthetic wind warning services based on the hypothetical service listed above, where the forecast service directive is to forecast the highest category that has at least a 30% chance of occuring. Forecast A's wind forecasts are unbiased compared to observations. Forecast B is the same as Forecast A but with the wind values increased by 5%. We want to see if we can improve our forecast score by slightly over-warning in Forecast B. \n",
     "\n",
-    "We assume that our categorical warning service is derived by converting continuous observations and forecasts into our 3 categories. This is handled within the implementation of `FIRM` within `scores`."
+    "We assume that our categorical warning service is derived by converting continuous observations and forecasts into our 3 categories. This is handled within the `scores` implementation of `FIRM`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -547,8 +549,8 @@
        "array([0.07531, 0.04689, 0.02842])\n",
        "Coordinates:\n",
        "    lead_day    int64 8B 1\n",
-       "  * components  (components) &lt;U21 252B &#x27;firm_score&#x27; ... &#x27;underforecast_penalty&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>components</span>: 3</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-d4e8f3ba-12af-4f7c-bad2-4c141fe5bf81' class='xr-array-in' type='checkbox' checked><label for='section-d4e8f3ba-12af-4f7c-bad2-4c141fe5bf81' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.07531 0.04689 0.02842</span></div><div class='xr-array-data'><pre>array([0.07531, 0.04689, 0.02842])</pre></div></div></li><li class='xr-section-item'><input id='section-ce99a51b-16ed-4c12-82c0-cca42d20ad75' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ce99a51b-16ed-4c12-82c0-cca42d20ad75' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>lead_day</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>1</div><input id='attrs-65199d14-0ecd-4b33-aa46-a8fd1b160ba2' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-65199d14-0ecd-4b33-aa46-a8fd1b160ba2' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4544f612-7f6b-4747-a2e1-b2cdb69752c3' class='xr-var-data-in' type='checkbox'><label for='data-4544f612-7f6b-4747-a2e1-b2cdb69752c3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(1)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>components</span></div><div class='xr-var-dims'>(components)</div><div class='xr-var-dtype'>&lt;U21</div><div class='xr-var-preview xr-preview'>&#x27;firm_score&#x27; ... &#x27;underforecast_...</div><input id='attrs-195837b8-763d-47f9-9a4f-1d06ed8c657a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-195837b8-763d-47f9-9a4f-1d06ed8c657a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f4f85a44-a029-479b-ac0f-9af86aa684b9' class='xr-var-data-in' type='checkbox'><label for='data-f4f85a44-a029-479b-ac0f-9af86aa684b9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;firm_score&#x27;, &#x27;overforecast_penalty&#x27;, &#x27;underforecast_penalty&#x27;],\n",
-       "      dtype=&#x27;&lt;U21&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-2d484db5-ff14-4327-9f7d-a843b9a78d1a' class='xr-section-summary-in' type='checkbox'  ><label for='section-2d484db5-ff14-4327-9f7d-a843b9a78d1a' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>components</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-a59a1e0d-0c2b-4c04-8d52-247fb1eb51ed' class='xr-index-data-in' type='checkbox'/><label for='index-a59a1e0d-0c2b-4c04-8d52-247fb1eb51ed' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;firm_score&#x27;, &#x27;overforecast_penalty&#x27;, &#x27;underforecast_penalty&#x27;], dtype=&#x27;object&#x27;, name=&#x27;components&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7aff94a5-c183-4872-9893-5bd61056974b' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-7aff94a5-c183-4872-9893-5bd61056974b' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "  * components  (components) &lt;U21 252B &#x27;firm_score&#x27; ... &#x27;underforecast_penalty&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>components</span>: 3</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-ec229470-7ec9-4e4b-ac85-44d1e429afdf' class='xr-array-in' type='checkbox' checked><label for='section-ec229470-7ec9-4e4b-ac85-44d1e429afdf' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.07531 0.04689 0.02842</span></div><div class='xr-array-data'><pre>array([0.07531, 0.04689, 0.02842])</pre></div></div></li><li class='xr-section-item'><input id='section-17f18465-e79e-411c-bdff-9222a06457fa' class='xr-section-summary-in' type='checkbox'  checked><label for='section-17f18465-e79e-411c-bdff-9222a06457fa' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>lead_day</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>1</div><input id='attrs-76def442-2534-43e2-9705-9cbc2841977e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-76def442-2534-43e2-9705-9cbc2841977e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-267461de-8b05-47a4-b827-14dcddc8575a' class='xr-var-data-in' type='checkbox'><label for='data-267461de-8b05-47a4-b827-14dcddc8575a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(1)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>components</span></div><div class='xr-var-dims'>(components)</div><div class='xr-var-dtype'>&lt;U21</div><div class='xr-var-preview xr-preview'>&#x27;firm_score&#x27; ... &#x27;underforecast_...</div><input id='attrs-9796bdc2-1555-462e-b04e-aef1ec81bd80' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-9796bdc2-1555-462e-b04e-aef1ec81bd80' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f1028494-1988-443a-891d-7e54ab1ba3f9' class='xr-var-data-in' type='checkbox'><label for='data-f1028494-1988-443a-891d-7e54ab1ba3f9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;firm_score&#x27;, &#x27;overforecast_penalty&#x27;, &#x27;underforecast_penalty&#x27;],\n",
+       "      dtype=&#x27;&lt;U21&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-1224f535-e222-48d4-a080-454c3efee567' class='xr-section-summary-in' type='checkbox'  ><label for='section-1224f535-e222-48d4-a080-454c3efee567' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>components</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-808a82a6-d99a-4097-8064-4a2e56c10f0f' class='xr-index-data-in' type='checkbox'/><label for='index-808a82a6-d99a-4097-8064-4a2e56c10f0f' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;firm_score&#x27;, &#x27;overforecast_penalty&#x27;, &#x27;underforecast_penalty&#x27;], dtype=&#x27;object&#x27;, name=&#x27;components&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-b49f4da9-f67b-4c9f-b984-fd538d055e0e' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-b49f4da9-f67b-4c9f-b984-fd538d055e0e' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray (components: 3)> Size: 24B\n",
@@ -558,7 +560,7 @@
        "  * components  (components) <U21 252B 'firm_score' ... 'underforecast_penalty'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
