--- a/tutorials/Spearmans_Correlation.ipynb
+++ b/tutorials/Spearmans_Correlation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spearmans's correlation coefficient\n",
+    "# Spearman's Correlation Coefficient\n",
     "\n",
     "\n",
     "## Overview\n",
@@ -236,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
