update firm include_components behaviour

--- a/tutorials/FIRM.ipynb
+++ b/tutorials/FIRM.ipynb
@@ -176,16 +176,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate FIRM scores for both warning services\n",
     "warning_a_firm = firm(\n",
-    "    warning_a, observation, risk_parameter=0.75, categorical_thresholds=[34, 48], threshold_weights=[2, 1]\n",
+    "    warning_a,\n",
+    "    observation,\n",
+    "    risk_parameter=0.75,\n",
+    "    categorical_thresholds=[34, 48],\n",
+    "    threshold_weights=[2, 1],\n",
+    "    include_components=True,\n",
     ")\n",
     "warning_b_firm = firm(\n",
-    "    warning_b, observation, risk_parameter=0.75, categorical_thresholds=[34, 48], threshold_weights=[2, 1]\n",
+    "    warning_b,\n",
+    "    observation,\n",
+    "    risk_parameter=0.75,\n",
+    "    categorical_thresholds=[34, 48],\n",
+    "    threshold_weights=[2, 1],\n",
+    "    include_components=True,\n",
     ")"
    ]
   },
