big refactor to create plotdata

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -58,12 +58,10 @@
     "- [Spearman's Correlation](./Spearmans_Correlation.ipynb)\n",
     "- [Kling-Gupta Efficiency](./Kling_Gupta_Efficiency.ipynb)\n",
     "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
-    "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Flip-Flop Index](./Flip_Flop_Index.ipynb)\n",
     "- [Consistent Scores](./Consistent_Scores.ipynb)\n",
     "- [Threshold Weighted Scores](./Threshold_Weighted_Scores.ipynb)\n",
-    "- [Quantile Interval Score and Interval Score](./Quantile_Interval_And_Interval_Score.ipynb)\n",
-    "- [Q-Q plots](./Q-Q_plots.ipynb)"
+    "- [Quantile Interval Score and Interval Score](./Quantile_Interval_And_Interval_Score.ipynb)"
    ]
   },
   {
@@ -86,8 +84,7 @@
     "- [Brier Score](./Brier_Score.ipynb)\n",
     "- [CRPS for forecasts expressed as CDFs](./CRPS_for_CDFs.ipynb)\n",
     "- [CRPS for ensemble forecasts](./CRPS_for_Ensembles.ipynb)\n",
-    "- [twCRPS for ensemble forecasts](./Threshold_Weighted_CRPS_for_Ensembles.ipynb)\n",
-    "- [Receiver Operating Characteristic (ROC)](./ROC.ipynb)"
+    "- [twCRPS for ensemble forecasts](./Threshold_Weighted_CRPS_for_Ensembles.ipynb)"
    ]
   },
   {
@@ -175,6 +172,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a149678",
+   "metadata": {},
+   "source": [
+    "# Plotting Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80769e9d",
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   }, 
+   "source": [
+    "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
+    "- [Q-Q plots](./Q-Q_plots.ipynb)\n",
+    "- [Receiver Operating Characteristic (ROC)](./ROC.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4ae976a7",
    "metadata": {
     "editable": true,
@@ -237,17 +256,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02b3405c-88c8-45d9-a999-e08039be6c93",
+   "cell_type": "markdown",
+   "id": "85c94643-82e4-4356-914a-1e8440aa1f0e",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scores",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
