improve docs and tutorials

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -175,7 +175,7 @@
    "id": "1a149678",
    "metadata": {},
    "source": [
-    "# Plotting Data"
+    "## Plotting Data"
    ]
   },
   {
@@ -185,7 +185,7 @@
     "tags": [
      "nbsphinx-gallery"
     ]
-   }, 
+   },
    "source": [
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Q-Q plots](./Q-Q_plots.ipynb)\n",
