Update reference to scores from italics to backticks

--- a/tutorials/Spearmans_Correlation.ipynb
+++ b/tutorials/Spearmans_Correlation.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "\n",
     "## Overview\n",
-    "In *scores*, the `spearmanr` function is used to compute Spearman's rank correlation coefficient between two datasets (e.g., observations and forecasts). While Spearman’s and Pearson’s correlation coefficients can yield similar values when the relationship is nearly linear, they measure different types of association. Spearman’s correlation captures monotonic relationships, regardless of whether they are linear, whereas Pearson’s correlation specifically measures the strength of a linear relationship. As a result, in cases where the relationship is non-linear but monotonic, Spearman’s correlation may be higher than Pearson’s."
+    "In `scores`, the `spearmanr` function is used to compute Spearman's rank correlation coefficient between two datasets (e.g., observations and forecasts). While Spearman’s and Pearson’s correlation coefficients can yield similar values when the relationship is nearly linear, they measure different types of association. Spearman’s correlation captures monotonic relationships, regardless of whether they are linear, whereas Pearson’s correlation specifically measures the strength of a linear relationship. As a result, in cases where the relationship is non-linear but monotonic, Spearman’s correlation may be higher than Pearson’s."
    ]
   },
   {
@@ -236,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
