Add Binary Contingency tutorial thumbnail

--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -13,7 +13,7 @@
    "id": "f74bd844-3694-44a8-89cf-75f2e5e94d4e",
    "metadata": {},
    "source": [
-    "Block Bootstraping Thumbnail (Below)"
+    "[Block_Bootstrapping.ipynb](../Block_Bootstrapping.ipynb) tutorial gallery thumbnail (below)"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "d0f4a8c9-02d3-4cce-a4e3-e084d5380709",
    "metadata": {},
    "source": [
-    "![Block Bootstrapping](block_bootstrapping.png)"
+    "![Block bootstrapping thumbnail](block_bootstrapping.png)"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "id": "2609ae0e-e912-4348-ad58-08cc242536d8",
    "metadata": {},
    "source": [
-    "Isotonic Regression Thumbnail (Below)"
+    "[Isotonic_Regression_And_Reliability_Diagrams.ipynb](../Isotonic_Regression_And_Reliability_Diagrams.ipynb) tutorial gallery thumbnail (below)"
    ]
   },
   {
@@ -37,13 +37,29 @@
    "id": "e690fc7d-978d-436c-9233-c83778b256e8",
    "metadata": {},
    "source": [
-    "![Isotonic Regression](isotonic_regression2.png)"
+    "![Isotonic regression thumbnail](isotonic_regression2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df9696e8-87e9-4fb7-80c1-fce78a2fe6a8",
+   "metadata": {},
+   "source": [
+    "[Binary_Contingency_Scores.ipynb](../Binary_Contingency_Scores.ipynb) tutorial gallery thumbnail(below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d1efe59-b0d0-49e5-a4cc-940c0a7a03de",
+   "metadata": {},
+   "source": [
+    "![Binary contingency thumbnail](binary_contingency.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "767c3ae2-7f4e-47a4-865f-6218a3438739",
+   "id": "378113fd-9655-436f-8a57-9961c5ec3eb9",
    "metadata": {},
    "outputs": [],
    "source": []
