Change thumbnail image for binary contingency tutorial and update file names for two other thumbnail images

--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -21,7 +21,7 @@
    "id": "d0f4a8c9-02d3-4cce-a4e3-e084d5380709",
    "metadata": {},
    "source": [
-    "![Block bootstrapping thumbnail](block_bootstrapping.png)"
+    "![Block bootstrapping thumbnail](block_bootstrapping_thumbnail.png)"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "id": "e690fc7d-978d-436c-9233-c83778b256e8",
    "metadata": {},
    "source": [
-    "![Isotonic regression thumbnail](isotonic_regression2.png)"
+    "![Isotonic regression thumbnail](isotonic_regression_thumbnail.png)"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "id": "6d1efe59-b0d0-49e5-a4cc-940c0a7a03de",
    "metadata": {},
    "source": [
-    "![Binary contingency thumbnail](binary_contingency.png)"
+    "![Binary contingency thumbnail](binary_contingency_thumbnail.png)"
    ]
   },
   {
