Adds tutorial gallery thumbnails to three tutorials (QQ plots; dimension handling; Angular Data)

--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -57,9 +57,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c520c14-126d-472b-94cc-cfaea02f66f1",
+   "metadata": {},
+   "source": [
+    "[Q-Q_plots.ipynb](../Q-Q_plots.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae317799-20c6-4d69-b1ca-3c51cc0919d7",
+   "metadata": {},
+   "source": [
+    "![Q-Q plots thumbnail](qq_thumbnail.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ca64a84-78b4-4104-8441-1628ef27f57b",
+   "metadata": {},
+   "source": [
+    "[Angular_data.ipynb](../Angular_data.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1568d214-6b46-4898-b90f-7bae9e9c182d",
+   "metadata": {},
+   "source": [
+    "![Angualar data thumbnail](angular_data_thumbnail.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c7772bf-699f-47fc-bf01-0094adc2e526",
+   "metadata": {},
+   "source": [
+    "[Dimension_Handling.ipynb](../Dimension_Handling.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca532e64-1e54-4836-86da-3a2289566b2a",
+   "metadata": {},
+   "source": [
+    "![Dimension Handling Thumbnail](dimension_handling_thumbnail.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "378113fd-9655-436f-8a57-9961c5ec3eb9",
+   "id": "334f4efc-9257-49c3-bb50-e1d2e4b9d21a",
    "metadata": {},
    "outputs": [],
    "source": []
