Update header levels for tutorial

--- a/tutorials/Diebold_Mariano_Test_Statistic.ipynb
+++ b/tutorials/Diebold_Mariano_Test_Statistic.ipynb
@@ -15,8 +15,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modified Diebold Mariano test\n",
-    "#### Background\n",
+    "## Modified Diebold Mariano test\n",
+    "### Background\n",
     "One of the most widely used methods to test the difference between two competing \n",
     "forecasts in the stats community is the Diebold Mariano (DM) test (Diebold and Mariano 1995). \n",
     "Since then, there have been several modifications to the original test statistic, two of \n",
@@ -40,7 +40,7 @@
     "and theta, in HG's notation) are assumed to be positive and are computed using\n",
     "`scipy.optimize.least_squares`.\n",
     "\n",
-    "**Why use the DM test?**\n",
+    "#### Why use the DM test? \n",
     "\n",
     "Unlike many other statistical tests, the DM test statistic\n",
     "\n",
@@ -51,10 +51,12 @@
     "on day *i*, and a lead day *x* forecast issued on day *i* + 1. The DM statistic handles this \n",
     "serial correlation using the autocorrelation function.\n",
     "\n",
-    "### References \n",
+    "## References \n",
     "- Diebold, F.X. and Mariano, R.S. (1995). Comparing predictive accuracy. *Journal of Business and Economic Statistics*, **13**, 253-263.\n",
     "- Harvey, Leybourne and Newbold (1997). Testing the equality of prediction mean squared errors, *International Journal of Forecasting*, **13**, 281-291.\n",
-    "- Hering and Genton (2011). Comparing spatial predictions, *Technometrics*, **53**, 414-425."
+    "- Hering and Genton (2011). Comparing spatial predictions, *Technometrics*, **53**, 414-425.\n",
+    "\n",
+    "## Examples"
    ]
   },
   {
@@ -611,7 +613,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scoresenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -625,10 +627,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.12.3"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
