--- a/tutorials/Angular_data.ipynb
+++ b/tutorials/Angular_data.ipynb
@@ -443,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the forecast and observed values are random taken from a uniform distribution on the interval [0, 360), we would expect the MAE to be around 90. Let's see what happens when we don't use the `is_angular=True`."
+    "Since the forecast and observed values are randomly taken from a uniform distribution on the interval (0, 360), we would expect the MAE to be around 90. Let's see what happens when we don't use the `is_angular=True`."
    ]
   },
   {
@@ -848,7 +848,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scoresenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -862,10 +862,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.13.5"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
