Add thumbnails for three tutorials (NSE; Quantile Loss; Threshold Weighted Scores)

--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -155,7 +155,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff4653ba-2d32-43b1-b0b8-87f2c194c398",
+   "id": "b2bb4852-0843-45fd-a3c0-66d4db3dfcfa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5c245ec-5f00-4c4f-8b43-995cef8d4b84",
+   "metadata": {},
+   "source": [
+    "![NSE 2](NSE_thumbnail2.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee0f0ed2-01bb-4401-81e9-c4e9a3252ebd",
    "metadata": {},
    "outputs": [],
    "source": []
