Add thumbnails for three tutorials (NSE; Quantile Loss; Threshold Weighted Scores) (#880)

--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c7772bf-699f-47fc-bf01-0094adc2e526",
+   "id": "60c0a778-37b4-4cff-84ae-f97de6220d36",
    "metadata": {},
    "source": [
     "[Dimension_Handling.ipynb](../Dimension_Handling.ipynb) tutorial gallery thumbnail (below)"
@@ -105,9 +105,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "32ac3a74-0247-4097-a37c-d809a6d05751",
+   "metadata": {},
+   "source": [
+    "[NSE.ipynb](../NSE.ipynb) tutorial gallery thumbnail (below) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f40abfb-49d9-49ba-847a-734c1d25a772",
+   "metadata": {},
+   "source": [
+    "![NSE Thumbnail](NSE_thumbnail.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec913882-ba3d-4a86-a171-4a22ba74084e",
+   "metadata": {},
+   "source": [
+    "[Quantile_Loss.ipynb](../Quantile_Loss.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5478c10a-eb3e-4ba2-975e-32aa3d53d1c8",
+   "metadata": {},
+   "source": [
+    "![Quantile Loss Thumbnail](quantile_loss_thumbnail.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbca7602-b074-47c0-bde1-636e5f751003",
+   "metadata": {},
+   "source": [
+    "[Threshold_Weighted_Scores.ipynb](../Threshold_Weighted_Scores.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0906f44-1173-41db-8c6e-4375f7adcab7",
+   "metadata": {},
+   "source": [
+    "![Threshold Weighted Scores Thumbnail](threshold_weighted_scores_thumbnail.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "334f4efc-9257-49c3-bb50-e1d2e4b9d21a",
+   "id": "9b48fa34-b385-426c-9f90-4218c1d22785",
    "metadata": {},
    "outputs": [],
    "source": []
