Adds tutorial thumbnail for txCRPS for ensembles

--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -153,9 +153,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c707fee-9454-4d98-b59a-010b16cdb38a",
+   "metadata": {},
+   "source": [
+    "[Threshold_Weighted_CRPS_for_Ensembles.ipynb](../Threshold_Weighted_CRPS_for_Ensembles.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa5f24fb-2c98-4fc9-b098-3aa814d3b28d",
+   "metadata": {},
+   "source": [
+    "![Threshold Weighted CRPS for Ensembles Thumbnail](twCRPS_for_ensembles_thumbnail.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b48fa34-b385-426c-9f90-4218c1d22785",
+   "id": "c6ee572f-4b3d-4575-9a74-a7617e65b56c",
    "metadata": {},
    "outputs": [],
    "source": []
