Add tutorial gallery thumbnail for Brier score

--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -169,9 +169,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc7ae870-34ef-4623-9e05-993f7cff77a2",
+   "metadata": {},
+   "source": [
+    "[Brier_Score.ipynb](../Brier_Score.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b435631a-8337-4375-8d51-def741ac3036",
+   "metadata": {},
+   "source": [
+    "![Brier Score Thumbnail](brier_thumbnail.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6ee572f-4b3d-4575-9a74-a7617e65b56c",
+   "id": "cffe8c2d-7f50-4795-b40d-dc00fd6c5fd7",
    "metadata": {},
    "outputs": [],
    "source": []
