Add tutorial gallery thumbnail for qunatile interval score and interval score

--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -185,9 +185,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ca2ed26-bb3a-4539-bbbd-4273b7676278",
+   "metadata": {},
+   "source": [
+    "[Quantile_Interval_And_Interval_Score.ipynb](../Quantile_Interval_And_Interval_Score.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9de11024-97d6-489c-b427-3ca461c700bb",
+   "metadata": {},
+   "source": [
+    "Quantile 2 ![Quantile Interval and Interval Score Thumbnail](quantile_interval_score_and_interval_score_thumbnail.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cffe8c2d-7f50-4795-b40d-dc00fd6c5fd7",
+   "id": "ca1fb777-c00a-471e-9abe-0c86b9aab27f",
    "metadata": {},
    "outputs": [],
    "source": []
