--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -197,13 +197,29 @@
    "id": "9de11024-97d6-489c-b427-3ca461c700bb",
    "metadata": {},
    "source": [
-    "Quantile 2 ![Quantile Interval and Interval Score Thumbnail](quantile_interval_score_and_interval_score_thumbnail.png)"
+    "![Quantile Interval and Interval Score Thumbnail](quantile_interval_score_and_interval_score_thumbnail.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40641241-26f0-4729-bae1-482169a79ff0",
+   "metadata": {},
+   "source": [
+    "[Fractions_Skill_Score.ipynb](../Fractions_Skill_Score.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a4736d7-7e51-4a3d-85cd-822f207d84d0",
+   "metadata": {},
+   "source": [
+    "![Fractions Skill Score Thumbnail](fss_thumbnail.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca1fb777-c00a-471e-9abe-0c86b9aab27f",
+   "id": "8b808378-1466-48ad-af3d-17a11bd0d85d",
    "metadata": {},
    "outputs": [],
    "source": []
