--- a/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
+++ b/tutorials/images/Images_for_tutorial_gallery_thumbnails.ipynb
@@ -153,9 +153,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c707fee-9454-4d98-b59a-010b16cdb38a",
+   "metadata": {},
+   "source": [
+    "[Threshold_Weighted_CRPS_for_Ensembles.ipynb](../Threshold_Weighted_CRPS_for_Ensembles.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa5f24fb-2c98-4fc9-b098-3aa814d3b28d",
+   "metadata": {},
+   "source": [
+    "![Threshold Weighted CRPS for Ensembles Thumbnail](twCRPS_for_ensembles_thumbnail.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc7ae870-34ef-4623-9e05-993f7cff77a2",
+   "metadata": {},
+   "source": [
+    "[Brier_Score.ipynb](../Brier_Score.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b435631a-8337-4375-8d51-def741ac3036",
+   "metadata": {},
+   "source": [
+    "![Brier Score Thumbnail](brier_thumbnail.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ca2ed26-bb3a-4539-bbbd-4273b7676278",
+   "metadata": {},
+   "source": [
+    "[Quantile_Interval_And_Interval_Score.ipynb](../Quantile_Interval_And_Interval_Score.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9de11024-97d6-489c-b427-3ca461c700bb",
+   "metadata": {},
+   "source": [
+    "![Quantile Interval and Interval Score Thumbnail](quantile_interval_score_and_interval_score_thumbnail.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40641241-26f0-4729-bae1-482169a79ff0",
+   "metadata": {},
+   "source": [
+    "[Fractions_Skill_Score.ipynb](../Fractions_Skill_Score.ipynb) tutorial gallery thumbnail (below)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a4736d7-7e51-4a3d-85cd-822f207d84d0",
+   "metadata": {},
+   "source": [
+    "![Fractions Skill Score Thumbnail](fss_thumbnail.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b48fa34-b385-426c-9f90-4218c1d22785",
+   "id": "8b808378-1466-48ad-af3d-17a11bd0d85d",
    "metadata": {},
    "outputs": [],
    "source": []
